<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment4Title"/>

    <ImageView
        android:id="@+id/picture"
        android:src="@drawable/logo_picture"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label"/>

    <GridLayout
        android:id="@+id/GridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picture"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity"
        tools:ignore="MissingConstraints">

      <TextView
        android:id="@+id/labelName"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:text="Milan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelName" />

        <TextView
        android:id="@+id/labelSurname"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userSurname"/>

      <TextView
        android:id="@+id/surname"
        android:layout_marginTop="10dp"
          android:layout_marginLeft="20dp"
          app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Milanovic"/>

      <TextView
        android:id="@+id/labelBank"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userBank"/>

      <TextView
        android:id="@+id/bank"
        android:layout_marginTop="10dp"
          android:layout_marginLeft="20dp"
          app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OTP"/>

        <Button
            android:id="@+id/btnIzmeni"
            android:background="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="90dp"
            android:text="@string/editBtn"/>

        <Button
            android:id="@+id/btnOdjava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"
            android:background="@color/black"
            android:text="@string/logoutBtn"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>