<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.EditUserActivity">

    <TextView
        android:id="@+id/label"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editUserTitle"/>

    <ImageView
        android:id="@+id/picture"
        android:src="@drawable/logo_picture"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label"/>

    <GridLayout
        android:id="@+id/GridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picture"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/labelName"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"/>

        <EditText
            android:id="@+id/nameValue"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelName" />

        <TextView
            android:id="@+id/labelSurname"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userSurname"/>

        <EditText
            android:id="@+id/surnameValue"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelSurname"
            android:layout_width="80dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/labelBank"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surnameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userBank"/>

        <EditText
            android:id="@+id/bankValue"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelBank"
            android:layout_width="80dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnPonisti"
            android:background="@color/black"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="90dp"
            android:text="@string/cancelBtn"/>

        <Button
            android:id="@+id/btnPotvrdi"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"
            android:background="@color/black"
            android:text="@string/submitBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>