<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.EditUserActivity">

    <TextView
        android:id="@+id/label"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/financeActivityTitle"/>

    <ImageView
        android:id="@+id/picture"
        android:src="@drawable/logo_picture"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label"/>

    <GridLayout
        android:id="@+id/GridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picture"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/labelNaslov"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <EditText
            android:id="@+id/naslov"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelName" />

        <TextView
            android:id="@+id/labelKolicina"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/naslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"/>

        <EditText
            android:id="@+id/kolicina"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelKolicina"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/labelOpis"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kolicina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

    </GridLayout>


    <EditText
        android:id="@+id/opis"
        android:layout_column="0"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GridLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/pictureSound"
        android:src="@drawable/audio_picture"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GridLayout"/>

    <ImageView
        android:id="@+id/pictureRecordAudio"
        android:src="@drawable/recordaudio_picture"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GridLayout"/>

    <Chronometer
        android:id="@+id/chronometerone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/GridLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp" />

    <GridLayout
        android:id="@+id/GridLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opis"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnOdustani"
            android:background="@color/black"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/cancelBtn"/>

        <Button
            android:id="@+id/btnPromeni"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/black"
            android:text="@string/submitBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>